--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -32,7 +32,8 @@
                                 }">
                             <p class="text-xl mb-10 text-center">چی میتونم صدات کنم؟
                             </p>
-                            <input class="justify-self-center w-60" [(ngModel)]="preferences.username" pInputText placeholder="اختیاری" />
+                            <input class="justify-self-center w-60" [(ngModel)]="preferences.username" pInputText
+                                placeholder="اختیاری" />
 
                         </div>
                         <div class="justify-self-center absolute bottom-7">
@@ -154,26 +155,21 @@
                                 }">
                             <p class="text-xl mb-10 text-center"> دنبال بهترین نتیجه هستی؟ <br><br> هر روز مدیتیشن کن.
                             </p>
-                            <div class="flex flex-row items-center gap-3">
+                            <div class="text-lg text-[var(--p-primary-100)] flex flex-row items-center gap-3">
                                 <p class=" text-center"> ساعت </p>
-                                <p-calendar [(ngModel)]="preferences.notificationTime" [iconDisplay]="'input'"
-                                    [showIcon]="true" [timeOnly]="true" inputId="templatedisplay" styleClass="w-25"
+                                <p-date-picker [(ngModel)]="notificationTime" [iconDisplay]="'input'"
+                                    (ngModelChange)="setNotifications()" [showIcon]="true" [timeOnly]="true" styleClass="w-25" inputId="templatedisplay"
                                     [ngStyle]="{'direction': 'ltr', 'text-align': 'left', '!important': true}">
                                     <ng-template #inputicon let-clickCallBack="clickCallBack">
                                         <i class="pi pi-clock" (click)="clickCallBack($event)"></i>
                                     </ng-template>
-                                    <ng-template pTemplate="inputfield" let-value>
-                                        <input #timeinput pInputText [(ngModel)]="preferences.notificationTime" [value]="value ? (value | persianDigits) : ''"
-                                            readonly>
-                                        <button (click)="timeinput.focus()">Focus input</button>
-                                    </ng-template>
-                                </p-calendar>
+                                </p-date-picker>
                                 <p class="text-center"> یادآوری کن</p>
                             </div>
-                            <p-button variant="outlined" severity="secondary" (onClick)="goToStep(6)" (onClick)="setNotificationsLater()" styleClass="mt-5">
+                            <p-button variant="text" severity="secondary" (onClick)="goToStep(6)"
+                                (onClick)="setNotificationsLater()" styleClass="mt-5">
                                 <div class="flex justify-center items-center h-12">
-                                    <h2 class="text-lg">بعداً تنظیم میکنم.</h2>
-                                    <p></p>
+                                    <p>بعداً تنظیم میکنم.</p>
                                 </div>
                             </p-button>
                         </div>
@@ -184,7 +180,7 @@
                     </ng-template>
                 </p-step-panel>
 
-                
+
                 <p-step-panel [value]="6">
                     <ng-template #content let-activateCallback="activateCallback">
                         <div class="justify-self-center absolute top-7">
@@ -234,36 +230,36 @@
 
                         <div class="justify-self-center absolute bottom-7">
                             <p-button [disabled]="preferences.goals.length === 0" icon="pi pi-chevron-down"
-                                rounded="true" (onClick)="goToStep(7)" (onClick)="updatePreferences()" size="large"></p-button>
+                                rounded="true" (onClick)="goToStep(7)" (onClick)="updatePreferences()"
+                                size="large"></p-button>
                         </div>
                     </ng-template>
                 </p-step-panel>
 
-                                <p-step-panel [value]="7">
+                <p-step-panel [value]="7">
                     <ng-template #content let-activateCallback="activateCallback">
                         <div class="justify-self-center absolute top-7">
                             <p-button icon="pi pi-chevron-up" rounded="true" (onClick)="goToStep(6)"
                                 size="large"></p-button>
                         </div>
 
-                        <div class="flex flex-col w-full p-10" [ngClass]="{
+                        <div class="flex flex-col justify-center items-center w-full p-10" [ngClass]="{
                                     'slide-in-down' : direction === 'down' && activeStep === 7 ,
                                     'slide-in-up' : direction === 'up' && activeStep === 7 ,
                                 }">
-                            <p class="text-xl mb-5 text-center"> می‌خوای اشتراک بگیری تا به همه محتویات برکه دسترسی داشته باشی؟  </p>
+                            <p class="text-xl mb-5 text-center"> می‌خوای اشتراک بگیری تا به همه محتویات برکه دسترسی
+                                داشته باشی؟ </p>
 
-                            <div class="grid grid-cols-1 justify-center items-center gap-3 lg:w-100">
-                                <p-button (onClick)="subscribe()"
-                                    styleClass="w-full h-35">
+                            <div class="grid grid-cols-1 justify-center items-center gap-3 md:w-100">
+                                <p-button (onClick)="subscribe()" styleClass="w-full h-35">
                                     <div class="flex flex-col justify-center items-center h-15">
                                         <h2 class="text-lg">بله، همین الان بریم سراغش</h2><br>
                                         <p>اشتراک برکه (از ۷۰,۰۰۰ تومان)</p>
                                     </div>
                                 </p-button>
-                                <p-button variant="text" severity="secondary"
-                                    styleClass="w-full">
-                                  <div class="flex justify-center items-center h-15">
-                                        <h2 class="text-lg">فعلاً نه، بعداً تصمیم می‌گیرم</h2>
+                                <p-button variant="text" severity="secondary" (onClick)="start()" styleClass="w-full">
+                                    <div class="flex justify-center items-center h-15">
+                                        <p>فعلاً نه، بعداً تصمیم می‌گیرم</p>
                                     </div>
                                 </p-button>
 
@@ -271,16 +267,19 @@
                         </div>
 
                         <div class="justify-self-center absolute bottom-7">
-                            <p-button (onClick)="start()" 
-                                rounded="true" size="large">
-                                  <svg class="w-5 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 232 101">
-          <path fill="#ffffff00"
-              d="M188.4,77.88c.04-.18,.08-.35,.12-.53-.92-.31-1.83-.68-2.76-.93-6.93-1.84-14.1-3.07-20.76-5.6-12.23-4.64-22.1-13.14-31.99-21.45-.22-.19-.05-1.32,.28-1.61,3.55-3.04,7.1-6.1,10.79-8.96,9.03-7.01,18.35-13.52,29.76-16.19,1.14-.27,1.64-.09,2.19,1,4.78,9.45,11.16,17.48,20.6,22.69,.53,.29,1.17,.49,1.77,.53,1.24,.08,2.5,.01,3.75,.03,.73,.01,1.45,.08,2.68,.16-1.14-.78-1.84-1.25-2.53-1.73,.91-.33,1.67-.22,2.39,0,4.87,1.54,9.72,3.13,14.59,4.63,.95,.29,1.99,.28,2.99,.41-6.36-2.71-13.85-2.93-18.7-9.79,4.05,.33,7.39,3.07,11.13,1.22-.61-1.19-4.22-2.03-.27-4-2.07-1.15-3.9-2.12-5.68-3.15-7.98-4.59-15.17-10.11-19.16-18.7-1.43-3.07-3.42-5.27-6.09-7.09-.79-.54-1.5-1.24-2.35-1.65-.89-.43-1.92-.87-2.87-.82-9,.46-17.4,3.08-25.31,7.37-11.31,6.14-21.46,13.87-30.87,22.6-1.24,1.15-1.94,1.11-3.21,0-5.4-4.74-10.86-9.44-16.42-14-13.4-10.99-28.24-17.92-46.14-15.79-13.86,1.65-26.14,6.71-35.6,17.32-7.28,8.16-10.86,17.75-9.47,28.81,1.36,10.87,6.97,19.37,15.37,26.08,11.99,9.57,25.85,13.2,40.96,11.77,7.48-.71,14.03-4.38,20.51-8,11.5-6.44,21.6-14.79,31.71-23.13,.88-.73,1.4-.88,2.37-.02,9.48,8.45,19.97,15.58,31.36,21,10.33,4.92,21.47,7.7,33.12,6.25,2.13-.27,4.67-1.58,5.92-3.24,1.15-1.52,2.33-2.1,3.87-2.59,.38-.12,.74-.33,1.1-.5,0-.2,0-.4,0-.6-3.77-.41-7.54-.82-11.31-1.23,.02-.21,.03-.41,.05-.62h2.09Z" />
-          <path fill="var(--p-primary-50)"
-              d="M188.4,77.88h-2.09c-.02,.21-.03,.41-.05,.62,3.77,.41,7.54,.82,11.31,1.23,0,.2,0,.4,0,.6-.37,.17-.72,.37-1.1,.5-1.54,.49-2.72,1.07-3.87,2.59-1.25,1.66-3.79,2.98-5.92,3.24-11.65,1.45-22.79-1.33-33.12-6.25-11.39-5.43-21.88-12.56-31.36-21-.97-.86-1.49-.71-2.37,.02-10.11,8.34-20.21,16.69-31.71,23.13-6.48,3.63-13.03,7.29-20.51,8-15.11,1.43-28.96-2.2-40.96-11.77-8.4-6.7-14.01-15.2-15.37-26.08-1.39-11.06,2.2-20.65,9.47-28.81C30.21,13.29,42.5,8.23,56.36,6.57c17.89-2.14,32.73,4.8,46.14,15.79,5.56,4.56,11.01,9.25,16.42,14,1.26,1.11,1.96,1.16,3.21,0,9.41-8.73,19.56-16.46,30.87-22.6,7.91-4.29,16.3-6.91,25.31-7.37,.95-.05,1.98,.4,2.87,.82,.85,.41,1.56,1.11,2.35,1.65,2.67,1.81,4.67,4.02,6.09,7.09,3.99,8.58,11.17,14.1,19.16,18.7,1.79,1.03,3.61,2,5.68,3.15-3.95,1.97-.34,2.81,.27,4-3.75,1.85-7.08-.89-11.13-1.22,4.85,6.86,12.34,7.07,18.7,9.79-1-.13-2.04-.12-2.99-.41-4.88-1.5-9.73-3.09-14.59-4.63-.72-.23-1.48-.34-2.39,0,.69,.47,1.39,.95,2.53,1.73-1.23-.07-1.96-.14-2.68-.16-1.25-.02-2.5,.05-3.75-.03-.6-.04-1.24-.24-1.77-.53-9.44-5.21-15.82-13.25-20.6-22.69-.55-1.09-1.05-1.27-2.19-1-11.41,2.66-20.72,9.18-29.76,16.19-3.69,2.86-7.24,5.92-10.79,8.96-.33,.29-.5,1.42-.28,1.61,9.89,8.31,19.76,16.8,31.99,21.45,6.67,2.53,13.83,3.76,20.76,5.6,.94,.25,1.84,.62,2.76,.93-.04,.18-.08,.35-.12,.53Zm-126.11-3.04c1.24-.12,2.66-.1,4.01-.41,1.82-.42,3.65-.93,5.37-1.66,13.91-5.85,25.72-14.91,37.08-24.63,.19-.16,.08-1.03-.17-1.27-7.11-6.77-14.65-12.99-23.12-18.01-15.86-9.4-34.39-8.72-48.1,1.69-12.56,9.54-13.57,23.54-2.21,34.44,7.47,7.16,16.99,9.27,27.14,9.84Z" />
-          <path fill="#ffffff00"
-              d="M62.29,74.83c-10.15-.58-19.67-2.68-27.14-9.84-11.37-10.9-10.35-24.9,2.21-34.44,13.71-10.41,32.24-11.09,48.1-1.69,8.47,5.01,16.01,11.24,23.12,18.01,.25,.24,.36,1.11,.17,1.27-11.36,9.71-23.16,18.77-37.08,24.63-1.72,.72-3.55,1.24-5.37,1.66-1.35,.31-2.77,.3-4.01,.41Z" />
-      </svg></p-button>
+                            <p-button (onClick)="start()" severity="primary" styleClass="w-13 h-13" rounded="true"
+                                size="large">
+                                 <span
+                class="rounded-full p-1 w-10 h-10 inline-flex items-center justify-center">
+                                <svg class=" w-7 h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 220 100">
+                                    <path fill="#ffffff00"
+                                        d="M188.4,77.88c.04-.18,.08-.35,.12-.53-.92-.31-1.83-.68-2.76-.93-6.93-1.84-14.1-3.07-20.76-5.6-12.23-4.64-22.1-13.14-31.99-21.45-.22-.19-.05-1.32,.28-1.61,3.55-3.04,7.1-6.1,10.79-8.96,9.03-7.01,18.35-13.52,29.76-16.19,1.14-.27,1.64-.09,2.19,1,4.78,9.45,11.16,17.48,20.6,22.69,.53,.29,1.17,.49,1.77,.53,1.24,.08,2.5,.01,3.75,.03,.73,.01,1.45,.08,2.68,.16-1.14-.78-1.84-1.25-2.53-1.73,.91-.33,1.67-.22,2.39,0,4.87,1.54,9.72,3.13,14.59,4.63,.95,.29,1.99,.28,2.99,.41-6.36-2.71-13.85-2.93-18.7-9.79,4.05,.33,7.39,3.07,11.13,1.22-.61-1.19-4.22-2.03-.27-4-2.07-1.15-3.9-2.12-5.68-3.15-7.98-4.59-15.17-10.11-19.16-18.7-1.43-3.07-3.42-5.27-6.09-7.09-.79-.54-1.5-1.24-2.35-1.65-.89-.43-1.92-.87-2.87-.82-9,.46-17.4,3.08-25.31,7.37-11.31,6.14-21.46,13.87-30.87,22.6-1.24,1.15-1.94,1.11-3.21,0-5.4-4.74-10.86-9.44-16.42-14-13.4-10.99-28.24-17.92-46.14-15.79-13.86,1.65-26.14,6.71-35.6,17.32-7.28,8.16-10.86,17.75-9.47,28.81,1.36,10.87,6.97,19.37,15.37,26.08,11.99,9.57,25.85,13.2,40.96,11.77,7.48-.71,14.03-4.38,20.51-8,11.5-6.44,21.6-14.79,31.71-23.13,.88-.73,1.4-.88,2.37-.02,9.48,8.45,19.97,15.58,31.36,21,10.33,4.92,21.47,7.7,33.12,6.25,2.13-.27,4.67-1.58,5.92-3.24,1.15-1.52,2.33-2.1,3.87-2.59,.38-.12,.74-.33,1.1-.5,0-.2,0-.4,0-.6-3.77-.41-7.54-.82-11.31-1.23,.02-.21,.03-.41,.05-.62h2.09Z" />
+                                    <path fill="var(--p-primary-50)"
+                                        d="M188.4,77.88h-2.09c-.02,.21-.03,.41-.05,.62,3.77,.41,7.54,.82,11.31,1.23,0,.2,0,.4,0,.6-.37,.17-.72,.37-1.1,.5-1.54,.49-2.72,1.07-3.87,2.59-1.25,1.66-3.79,2.98-5.92,3.24-11.65,1.45-22.79-1.33-33.12-6.25-11.39-5.43-21.88-12.56-31.36-21-.97-.86-1.49-.71-2.37,.02-10.11,8.34-20.21,16.69-31.71,23.13-6.48,3.63-13.03,7.29-20.51,8-15.11,1.43-28.96-2.2-40.96-11.77-8.4-6.7-14.01-15.2-15.37-26.08-1.39-11.06,2.2-20.65,9.47-28.81C30.21,13.29,42.5,8.23,56.36,6.57c17.89-2.14,32.73,4.8,46.14,15.79,5.56,4.56,11.01,9.25,16.42,14,1.26,1.11,1.96,1.16,3.21,0,9.41-8.73,19.56-16.46,30.87-22.6,7.91-4.29,16.3-6.91,25.31-7.37,.95-.05,1.98,.4,2.87,.82,.85,.41,1.56,1.11,2.35,1.65,2.67,1.81,4.67,4.02,6.09,7.09,3.99,8.58,11.17,14.1,19.16,18.7,1.79,1.03,3.61,2,5.68,3.15-3.95,1.97-.34,2.81,.27,4-3.75,1.85-7.08-.89-11.13-1.22,4.85,6.86,12.34,7.07,18.7,9.79-1-.13-2.04-.12-2.99-.41-4.88-1.5-9.73-3.09-14.59-4.63-.72-.23-1.48-.34-2.39,0,.69,.47,1.39,.95,2.53,1.73-1.23-.07-1.96-.14-2.68-.16-1.25-.02-2.5,.05-3.75-.03-.6-.04-1.24-.24-1.77-.53-9.44-5.21-15.82-13.25-20.6-22.69-.55-1.09-1.05-1.27-2.19-1-11.41,2.66-20.72,9.18-29.76,16.19-3.69,2.86-7.24,5.92-10.79,8.96-.33,.29-.5,1.42-.28,1.61,9.89,8.31,19.76,16.8,31.99,21.45,6.67,2.53,13.83,3.76,20.76,5.6,.94,.25,1.84,.62,2.76,.93-.04,.18-.08,.35-.12,.53Zm-126.11-3.04c1.24-.12,2.66-.1,4.01-.41,1.82-.42,3.65-.93,5.37-1.66,13.91-5.85,25.72-14.91,37.08-24.63,.19-.16,.08-1.03-.17-1.27-7.11-6.77-14.65-12.99-23.12-18.01-15.86-9.4-34.39-8.72-48.1,1.69-12.56,9.54-13.57,23.54-2.21,34.44,7.47,7.16,16.99,9.27,27.14,9.84Z" />
+                                    <path fill="#ffffff00"
+                                        d="M62.29,74.83c-10.15-.58-19.67-2.68-27.14-9.84-11.37-10.9-10.35-24.9,2.21-34.44,13.71-10.41,32.24-11.09,48.1-1.69,8.47,5.01,16.01,11.24,23.12,18.01,.25,.24,.36,1.11,.17,1.27-11.36,9.71-23.16,18.77-37.08,24.63-1.72,.72-3.55,1.24-5.37,1.66-1.35,.31-2.77,.3-4.01,.41Z" />
+                                </svg>
+                            </span></p-button>
                         </div>
                     </ng-template>
                 </p-step-panel>
