journeys section completed

--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -153,7 +153,7 @@
                                     'slide-in-down' : direction === 'down' && activeStep === 5 ,
                                     'slide-in-up' : direction === 'up' && activeStep === 5 ,
                                 }">
-                            <p class="text-xl mb-10 text-center"> دنبال بهترین نتیجه هستی؟ <br><br> هر روز مدیتیشن کن.
+                            <p class="text-xl mb-10 text-center"> دنبال بهترین نتیجه هستی؟ <br> هر روز مدیتیشن کن.
                             </p>
                             <div class="text-lg text-[var(--p-primary-100)] flex flex-row items-center gap-3">
                                 <p class=" text-center"> ساعت </p>
@@ -206,12 +206,12 @@
                                     <div class="h-15"></div>
                                 </p-button>
                                 <p-button variant="outlined" severity="secondary" (onClick)="themeChange('forest')"
-                                    styleClass="w-full p-4 text-lg" label="جنگل جادویی" size="large"
+                                    styleClass="w-full p-4 text-lg" label="جنگل" size="large"
                                     [ngClass]="{'active-button': preferences.theme === 'forest'}">
                                     <div class="h-15"></div>
                                 </p-button>
                                 <p-button variant="outlined" severity="secondary" (onClick)="themeChange('morning')"
-                                    styleClass="w-full p-4 text-lg" label="صبح روشن" size="large"
+                                    styleClass="w-full p-4 text-lg" label="صبح" size="large"
                                     [ngClass]="{'active-button': preferences.theme === 'morning'}">
                                     <div class="h-15"></div>
                                 </p-button>
