--- a/src/app/journeys/journeys.component.html
+++ b/src/app/journeys/journeys.component.html
@@ -104,7 +104,7 @@
         <div>
           <p-button size="small" rounded="true" severity="secondary" variant="text">
             <span class="rounded-full border-2 w-8 h-8 inline-flex items-center justify-center">
-              <i class="pi pi-caret-left"></i>
+              <i class="pi pi-play ml-0.5"></i>
             </span>
           </p-button>
         </div>
