--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -4,7 +4,7 @@
         <router-outlet></router-outlet>
     </div>
     <div appWindow [opacity]="0.85" class="row-span-2 backdrop-blur-md flex flex-row w-full md:flex-col md:col-span-1 md:h-full">
-        <p-button class="w-1/4 flex-col md:w-auto md:h-1/4 flex justify-center items-center" routerLink="berke"
+        <p-button class="w-1/4 flex-col md:w-auto min-h-10 md:h-1/4 flex justify-center items-center" routerLink="berke"
             routerLinkActive="active-button font-bold md:border-r-2 md:border-t-0 border-t-2 border-[var(--p-primary-500)]"
             variant="text" severity="secondary">
             <span class="rounded-full border-2 w-10 h-10 inline-flex items-center justify-center">
@@ -20,7 +20,7 @@
             <span class="text-sm">برکه</span>
         </p-button>
 
-        <p-button class="w-1/4 md:w-auto md:h-1/4 flex justify-center items-center" routerLink="journeys"
+        <p-button class="w-1/4 md:w-auto md:h-1/4 min-h-10 flex justify-center items-center" routerLink="journeys"
             routerLinkActive="active-button font-bold md:border-r-2 md:border-t-0 border-t-2 border-[var(--p-primary-500)]"
             variant="text" severity="secondary"> <span
                 class="rounded-full border-2 w-10 h-10 inline-flex items-center justify-center">
@@ -57,7 +57,7 @@
             <span class="text-sm">سفرها</span>
         </p-button>
 
-        <p-button class="w-1/4 md:w-auto md:h-1/4 flex justify-center items-center" routerLink="journal" variant="text"
+        <p-button class="w-1/4 md:w-auto md:h-1/4 flex min-h-10 justify-center items-center" routerLink="journal" variant="text"
             severity="secondary"
             routerLinkActive="active-button font-bold md:border-r-2 md:border-t-0 border-t-2 border-[var(--p-primary-500)]">
             <span class="rounded-full border-2 w-10 h-10 inline-flex items-center justify-center">
@@ -66,7 +66,7 @@
             <span class="text-sm">جورنال</span>
         </p-button>
 
-        <p-button class="w-1/4 md:w-auto md:h-1/4 flex justify-center items-center" routerLink="profile" variant="text"
+        <p-button class="w-1/4 md:w-auto md:h-1/4 flex min-h-10 justify-center items-center" routerLink="profile" variant="text"
             severity="secondary"
             routerLinkActive="active-button font-bold md:border-r-2 md:border-t-0 border-t-2 border-[var(--p-primary-500)]">
             <span class="rounded-full border-2 w-10 h-10 inline-flex items-center justify-center">
