--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="flex overflow-y-auto flex-col justify-center items-center min-h-screen">
 
-    <div appWindow [opacity]="1" class="flex backdrop-blur-md
+    <div appWindow [opacity]="1" class="flex backdrop-blur-2xl
  flex-col overflow-hidden relative w-1/4 min-w-80 h-100 rounded-xl p-2
- text-right border-2 border-[var(--p-primary-600)] shadow-md text-shadow-white">
+ text-right shadow-md text-shadow-white">
         <p-stepper [(value)]="activeStep" class="w-full">
             <!-- login form initialization
                 first step phone number -->
