--- a/src/app/berke/berke.component.html
+++ b/src/app/berke/berke.component.html
@@ -1,1 +1,48 @@
-<p>berke works!</p>
+<div class="flex justify-center">
+    <div class="w-full lg:w-3/4 m-5">
+        <div appWindow (click)="journal()" class="p-3 rounded-2xl">
+            <p class="text-2xl text-[var(--p-primary-50)]">بنویس ...</p>
+                  <div class=" my-5 items-center justify-between gap-3 text-[var(--p-primary-50)] flex flex-row">
+        <div class="w-1/3">
+          <p-floatlabel>
+            <p-date-picker fluid="true" [iconDisplay]="'input'" [showIcon]="true"
+              [timeOnly]="true" inputId="time">
+              <!-- [ngStyle]="{'direction': 'ltr', 'text-align': 'left', '!important': true}"> -->
+              <ng-template #inputicon let-clickCallBack="clickCallBack">
+                <i class="pi pi-clock" (click)="clickCallBack($event)"></i>
+              </ng-template>
+            </p-date-picker>
+            <label for="time">ساعت</label>
+          </p-floatlabel>
+
+        </div>
+        <div class="w-2/3 lg:w-1/3">
+          <p-floatlabel>
+            <p-multiselect inputId="emotions" fluid="true" optionLabel="emotion" display="chip"
+              [maxSelectedLabels]="5">
+
+            </p-multiselect>
+            <label for="emotions">حس و حال</label>
+          </p-floatlabel>
+        </div>
+      </div>
+
+      <textarea rows="5"  type="text" placeholder="تست" fluid="true" pTextarea
+        [autoResize]="true">
+            </textarea>
+      <div class="my-3">
+        <p-button  rounded="true" severity="primary">
+          <span>ذخیره <i class="pi pi-save"></i></span>
+        </p-button>
+      </div>
+        </div>
+        <div appWindow class="my-5 rounded-2xl h-75 p-3">
+            <p class="text-2xl text-[var(--p-primary-50)]">ادامه ...</p>
+
+        </div>
+                <div appWindow class="my-5 rounded-2xl h-75 p-3">
+            <p class="text-2xl text-[var(--p-primary-50)]">پیشنهادی</p>
+
+        </div>
+    </div>
+</div>
