--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,88 +1,146 @@
-<div appWave [duration]="(track?.duration ?? 0) * 1000" appWindow class="overflow-hidden absolute inset-1 top-0 left-0 right-0 bottom-0  w-full h-full">
-    <div class="justify-center h-1/2 items-center text-xl flex w-full text-[var(--p-primary-100)]">
-        <p>{{track?.title}}</p>
+<div appWave [syncLevel]="syncLevel()" appWindow class="overflow-hidden absolute inset-1 top-0 left-0 right-0 bottom-0  w-full h-full">
+  <div class="justify-center h-1/2 items-center text-xl flex w-full text-[var(--p-primary-100)]">
+    <p></p>
+  </div>
+  <!-- dialog for resumption of previous session -->
+  <p-dialog closable="false" header="ادامه جلسه مدیتیشن قبلی؟" [modal]="true" [(visible)]="resumeDialog"
+    styleClass="flex flex-row lg:w-1/4 md:w-1/3 w-3/4">
+    <div class="flex flex-col items-center gap-2">
+      <p-button (onClick)="resumeMeditationSession()" label="ادامه مدیتیشن قبلی" rounded="true" severity="primary">
+      </p-button>
+      <p-button (onClick)="newMeditationSession()" label="شروع مدیتیشن جدید" rounded="true" severity="primary">
+      </p-button>
     </div>
-    <p-dialog header="حس و حالت چیه؟" [modal]="true" [(visible)]="initialEmotionDialog" styleClass="flex w-1/2 h-[28rem]">
-      <p-multiselect inputId="emotions" fluid="true" [options]="emotions()" optionLabel="emotion" display="chip"
-              [(ngModel)]="meditationSession.initialEmotion" [maxSelectedLabels]="5">
-              <ng-template let-emotion #item>
-                <span class="w-full flex-row inline-flex items-center gap-1 justify-between rounded-2xl"
-                  [style.background]="'var(--p-primary-700)'" [style.color]="'var(--p-primary-50)'">
-                  <p class="m-1.5">{{ emotion.emotion }}</p>
-                  <app-emotion-icon class="w-5 h-5 mx-2 inline-block align-middle" [emotion]="emotion.emotion">
-                  </app-emotion-icon>
-                </span>
-              </ng-template>
-              <ng-template pTemplate="selectedItems" let-selected>
-                <div class="w-full flex flex-col gap-1">
-                  <div *ngFor="let s of selected"
-                    class="flex flex-1 items-center justify-between rounded-xl px-3 py-1 text-[var(--p-primary-50)] bg-[var(--p-primary-600)]">
-                    <!-- Emotion + Icon -->
-                    <div class="flex items-center gap-1">
-                      <span>{{ s.emotion }}</span>
-                      <app-emotion-icon class="w-5 h-5" [emotion]="s.emotion"></app-emotion-icon>
-                    </div>
-                    <!-- Remove icon -->
-                    <button type="button" class="hover:text-[var(--p-primary-200)]" (click)="removeEmotion(s, selected)"
-                      aria-label="Remove emotion">
-                      <span class="flex items-center justify-center">
-                        <i class="pi pi-times-circle"></i>
-                      </span>
-                    </button>
-                  </div>
-                </div>
-              </ng-template>
-              <ng-template #empty>
-                <p>
-                  پیدا نکردیم!
-                </p>
-              </ng-template>
+  </p-dialog>
+  <!-- dialog for initial emotion -->
+  <p-dialog closable="false" header="حس و حالت چیه؟" [modal]="true"
+    [(visible)]="initialEmotionDialog" styleClass="flex flex-row lg:w-1/3 md:w-1/2 w-3/4 h-[20rem]">
+    <p-multiselect appendTo="body" inputId="emotions" fluid="true" [options]="emotions()" optionLabel="emotion"
+      display="chip" [(ngModel)]="initialEmotion" [maxSelectedLabels]="1">
+      <ng-template let-emotion #item>
+        <span class="w-full flex-row inline-flex items-center gap-1 justify-between rounded-2xl"
+          [style.background]="'var(--p-primary-700)'" [style.color]="'var(--p-primary-50)'">
+          <p class="m-1.5">{{ emotion.emotion }}</p>
+          <app-emotion-icon class="w-5 h-5 mx-2 inline-block align-middle" [emotion]="emotion.emotion">
+          </app-emotion-icon>
+        </span>
+      </ng-template>
+      <ng-template pTemplate="selectedItems" let-selected>
+        <div class="w-full flex-wrap gap-1 flex">
+          <div
+            class="rounded-2xl px-2 p-1 ml-2 text-[var(--p-primary-600)] bg-[var(--p-accent-100)] flex-row inline-flex items-center justify-center"
+            *ngFor="let e of initialEmotion">
+            <div>
 
-      </p-multiselect>
-      <div class="absolute bottom-3">
-        <p-button (onClick)="startMeditationSession()" rounded="true" severity="primary">
-          <span>ذخیره <i class="pi pi-save"></i></span>
-        </p-button>
-      </div>
-    </p-dialog>
- <div class="absolute inset-0 m-auto rounded-full w-22 h-22 flex items-center justify-center">
-    <svg class="w-full h-full transform -rotate-90">
-      <circle
-        class="text-gray-300"
-        stroke="currentColor"
-        stroke-width="9"
-        fill="transparent"
-        r="36"
-        cx="44"
-        cy="44"
-      ></circle>
-      <circle
-        class="text-blue-500 transition-all duration-200"
-        stroke="currentColor"
-        stroke-width="9"
-        fill="transparent"
-        [attr.stroke-dasharray]="circumference"
-        [attr.stroke-dashoffset]="circumference - progress * circumference"
-        r="30"
-        cx="44"
-        cy="44"
-      ></circle>
-    </svg>
+              <app-emotion-icon class="w-5 text-[var(--p-primary-500)] h-5 inline-block align-middle"
+                [emotion]="e.emotion">
+              </app-emotion-icon>
+              {{ e.emotion }}
+            </div>
+            <button type="button" (click)="removeEmotion(e, initialEmotion)"
+              class="hover:text-[var(--p-primary-200)] m-1" aria-label="Remove emotion">
+              <span class="flex items-center justify-center">
+                <i class="pi pi-times-circle"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template #empty>
+        <p>
+          پیدا نکردیم!
+        </p>
+      </ng-template>
 
-  <button (click)="togglePlay()"
-    class="absolute z-1000 inset-0 m-auto bg-white rounded-full w-16 h-16 flex items-center justify-center">
-      <ng-container *ngIf="!isPlaying(); else pauseIcon">
-        <i class="pi pi-play"></i>
-      </ng-container>
-      <ng-template #pauseIcon>
-        <i class="pi pi-pause"></i>
-      </ng-template>  </button>
-      </div>
-          <audio
-  *ngIf="track"
-  [src]="track.audioUrl"
-      #audio
+    </p-multiselect>
 
-  autoplay>
-</audio>
+    <div class="absolute left-5 right-5 bottom-5">
+      <p-button (onClick)="startMeditationSession()" fluid="true" styleClass="" icon="pi pi-play" label="شروع مدیتیشن"
+        rounded="true" severity="primary">
+      </p-button>
+    </div>
+  </p-dialog>
+  <!-- dialog for final emotion tracking -->
+  <p-dialog closable="false" header="بعد از مدیتیشن چه حسی داری؟" [modal]="true"
+    [(visible)]="finalEmotionDialog" styleClass="flex flex-row lg:w-1/3 md:w-1/2 w-3/4 h-[20rem]">
+    <p-multiselect appendTo="body" inputId="emotions" fluid="true" [options]="emotions()" optionLabel="emotion"
+      display="chip" [(ngModel)]="finalEmotion" [maxSelectedLabels]="1">
+      <ng-template let-emotion #item>
+        <span class="w-full flex-row inline-flex items-center gap-1 justify-between rounded-2xl"
+          [style.background]="'var(--p-primary-700)'" [style.color]="'var(--p-primary-50)'">
+          <p class="m-1.5">{{ emotion.emotion }}</p>
+          <app-emotion-icon class="w-5 h-5 mx-2 inline-block align-middle" [emotion]="emotion.emotion">
+          </app-emotion-icon>
+        </span>
+      </ng-template>
+      <ng-template pTemplate="selectedItems" let-selected>
+        <div class="w-full flex-wrap gap-1 flex">
+          <div
+            class="rounded-2xl px-2 p-1 ml-2 text-[var(--p-primary-600)] bg-[var(--p-accent-100)] flex-row inline-flex items-center justify-center"
+            *ngFor="let e of finalEmotion">
+            <div>
+
+              <app-emotion-icon class="w-5 text-[var(--p-primary-500)] h-5 inline-block align-middle"
+                [emotion]="e.emotion">
+              </app-emotion-icon>
+              {{ e.emotion }}
+            </div>
+            <button type="button" (click)="removeEmotion(e, finalEmotion)"
+              class="hover:text-[var(--p-primary-200)] m-1" aria-label="Remove emotion">
+              <span class="flex items-center justify-center">
+                <i class="pi pi-times-circle"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template #empty>
+        <p>
+          پیدا نکردیم!
+        </p>
+      </ng-template>
+
+    </p-multiselect>
+
+    <div class="absolute left-5 right-5 bottom-5">
+      <p-button (onClick)="endMeditationSession()" fluid="true" styleClass="" icon="pi pi-save" label="ذخیره"
+        rounded="true" severity="primary">
+      </p-button>
+    </div>
+  </p-dialog>
+  <div class="absolute inset-0 m-auto w-64 flex justify-between items-center">
+    
+    <div class="w-15 h-15 flex justify-center items-center">
+      <button (click)="seek(+1)" class="z-1000">
+        <i class="pi pi-forward border-2 rounded-full p-3 border-white text-white"></i>
+      </button>
+    </div>
+
+    <div class="rounded-full w-22 h-22 flex items-center justify-center relative">
+      <svg class="w-full h-full transform -rotate-90">
+        <circle class="text-gray-300" stroke="currentColor" stroke-width="9" fill="transparent" r="36" cx="44" cy="44">
+        </circle>
+        <circle class="text-blue-500 transition-all duration-200" stroke="currentColor" stroke-width="9"
+          fill="transparent" r="36" cx="44" cy="44"
+          [attr.stroke-dasharray]="circumference" 
+      
+      [attr.stroke-dashoffset]="progressOffset()"></circle>
+      </svg>
+      <button (click)="togglePlayPause()"
+        class="absolute z-1000 inset-0 m-auto bg-white rounded-full w-16 h-16 flex items-center justify-center">
+        <ng-container *ngIf="!isPlaying() else pauseIcon">
+          <i class="pi pi-play"></i>
+        </ng-container>
+        <ng-template #pauseIcon>
+          <i class="pi pi-pause"></i>
+        </ng-template>
+      </button>
+    </div>
+    
+    <div class="w-15 h-15 flex justify-center items-center">
+      <button (click)="seek(-1)" class="z-1000">
+        <i class="pi pi-backward border-2 rounded-full p-3 border-white text-white"></i>
+      </button>
+    </div>
+</div>
 </div>
